--- a/css.css
+++ b/css.css
@@ -1,8 +1,8 @@
+/*                     */
 /* Slideshow container */
-
-
+/*                     */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
 }
@@ -132,7 +132,7 @@ body {
   padding: 0 4px;
 }
 
-/* Create four equal columns that sits next to each other */
+/* Create N, where N = 100 / max-width, equal columns that sits next to each other */
 .column {
   -ms-flex: 33%;
   /* IE10 */
@@ -148,7 +148,7 @@ body {
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1400px) {
   .column {
     -ms-flex: 50%;
     flex: 50%;
@@ -260,4 +260,36 @@ body {
   .modal-content {
     width: 100%;
   }
+}
+
+/*                      */
+/* https://www.w3schools.com/howto/howto_js_topnav.asp */
+/* Top Navigation panel */
+/*                      */
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
 }
