--- a/css.css
+++ b/css.css
@@ -147,6 +147,12 @@ body {
   width: 100%;
 }
 
+.column video {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 1400px) {
   .column {
