--- a/css.css
+++ b/css.css
@@ -117,7 +117,7 @@ body {
   font-family: Arial;
 }
 
-.header {
+.page-text-header {
   text-align: center;
   padding: 32px;
 }
@@ -273,29 +273,47 @@ body {
 /* Top Navigation panel */
 /*                      */
 /* Add a black background color to the top navigation */
-.topnav {
+.top-navigation-bar {
   background-color: #333;
   overflow: hidden;
+  bottom: 0;
+  width: 100%;
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
+.top-navigation-bar a {
   float: left;
+  display: block;
+  overflow: hidden;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  height: 50px;
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
+.top-navigation-bar a:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.topnav a.active {
+.top-navigation-bar a.active {
   background-color: #04AA6D;
   color: white;
+}
+
+.bottom-bar {
+  padding: 14px 16px;
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.bottom-bar img {
+  display: block;
+  overflow: hidden;
+  left: 50%;
 }
