--- a/partial/assets/css/main.css
+++ b/partial/assets/css/main.css
@@ -293,8 +293,8 @@
 .modal-content {
   margin: auto;
   display: block;
-  width: 80%;
-  max-width: 700px;
+  width: 90%;
+  max-width: 80%;
 }
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
